--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+.DS_Store
+CatBreeds.xcodeproj/project.xcworkspace/xcshareddata/
 
 ## Other
 *.moved-aside
